@@ -5271,4 +5271,7 @@ PACKAGE: 2.2.99.2
  * Cleaned up style on login page.
  * Login page now focuses on first input field.
  * Cleaned up default information.html page.
- 
+
+2006-11-13 cjg
+ * Renamed $eprint->has_editor to $eprint->in_editorial_scope_of to 
+    avoid semantic confusion. 
